Intent No2 to fix background size issue on mobile devices...

--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: content-box;
 }
 
 body {
